# intx

./: .bumpversion.cfg  .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CableCompilerSettings.cmake  README.md  appveyor.yml  bootstrap.cmake  circle.yml  codecov.yml  conanfile.py  lgtm.yml  main.cpp
.github/workflows/: codeql.yml
cmake/: CableCompilerSettings.cmake  FindGMP.cmake  HunterGate.cmake
cmake/Hunter/: config.cmake  init.cmake
cmake/cable/: CableCompilerSettings.cmake
cmake/toolchains/: default.cmake
examples/use_cmake_package/: CMakeLists.txt  use_int128.cpp
examples/use_cmake_subproject/: CMakeLists.txt  use_int128.cpp  use_intx.cpp
examples/use_cmake_subproject/intx/: .gitignore
include/intx/: builtins.h  gmp.hpp  int128.hpp  intx-merged.hpp  intx.hpp  mul_full.h  safe.hpp  uint384.hpp
lib/intx/: CMakeLists.txt  div.cpp  div.h  div.hpp  div4.cpp  div4.hpp  experiments.cpp  experiments.hpp  impl.cpp  int128.cpp  intx.cpp
libs/intx/: CMakeLists.txt  div.h  intx.cpp  intx.hpp  mul.h
test/: .clang-tidy  CMakeLists.txt  bench-shield.sh  shield.sh
test/analysis/: CMakeLists.txt  add.cpp  div.cpp  lt.cpp  sub.cpp
test/benchmarks/: CMakeLists.txt  bench_builtins.cpp  bench_div.cpp  bench_int128.cpp  bench_mul_full.cpp  benchmarks.cpp  div.h  div_benchmarks.cpp  div_implementations.cpp  div_knuth_implementations.cpp  gmp_wrappers.hpp  noinline.cpp  recint_wrappers.cpp  utils.cpp
test/experimental/: CMakeLists.txt  add.cpp  add.hpp  addmod.hpp  div.cpp  div.hpp  shift.hpp  shl.hpp  shr.hpp
test/fuzzer/: CMakeLists.txt  decode.py  fuzz_int128.cpp  fuzz_int512.cpp  fuzz_intx.cpp  fuzz_safe.cpp  opmod_fuzz.cpp
test/integration/: CMakeLists.txt
test/integration/cmake_package/: CMakeLists.txt
test/integration/cmake_subproject/: CMakeLists.txt
test/integration/conan_package/: .gitignore  CMakeLists.txt  conanfile.py
test/unittests/: CMakeLists.txt  test_bitwise.cpp  test_builtins.cpp  test_cases.hpp  test_div.cpp  test_int128.cpp  test_intx.cpp  test_intx_api.cpp  test_mul_full.cpp  test_safe.cpp  test_suite.hpp  test_uint128_api.cpp  test_uint256.cpp  test_uint256_api.cpp  test_uint384.cpp  test_utils.hpp
test/utils/: CMakeLists.txt  gmp.hpp  random.cpp  random.hpp  utils.hpp
tests/: CMakeLists.txt
tests/benchmarks/: CMakeLists.txt  benchmarks.cpp
tests/unittests/: CMakeLists.txt  mul.cpp  safe.cpp  test_intx.cpp  test_safe.cpp
